applications/software/cluster/capsule/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      containers:
        - name: caddy
          image: mirror.gcr.io/caddy@sha256:cfeb0b281bc44a5a51fecde39e9e577c60d863c0b6196e6bbdf58fd00960887f
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/caddy/Caddyfile
              subPath: Caddyfile
            - name: config
              mountPath: /srv/index.html
              subPath: index.html
          resources:
            requests:
              cpu: "0"
              memory: "0Mi"
            limits:
              memory: "300Mi"
              cpu: "300m"
      volumes:
        - name: config
          configMap:
            name: caddy-config
